--- a/src/containers/Dashboard/Dashboard.css
+++ b/src/containers/Dashboard/Dashboard.css
@@ -13,7 +13,7 @@
 }
 
 .good {
-    background-color: #81d7ff;
+    background-color: #d2d6aa;
 }
 
 .bad {
